# imitation

./: .codecov.yml  .codespell.skip  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.bib  CITATION.cff  CONTRIBUTING.md  Cartpole_Imitation_learning.ipynb  Dockerfile  LICENSE  Makefile  README.md  airl.py  codecov.yml  conftest.py  failure_rate.sh  jupt_requirements.txt  main.py  mypy.ini  nohup.out  pendulum_data_collect.py  pendulum_irl.py  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  reward_net.py  run_train_imitation.py  scraps.py  scripts.py  setup.cfg  setup.py  summaries.py  test_airl.py  test_reward_net.py  util.py
.circleci/: .config.yml.swp  config.yml
.github/: pull_request_template.md
benchmarking/: README.md  airl_seals_hopper_best_hp_eval.json  airl_seals_swimmer_best_hp_eval.json  airl_seals_walker_best_hp_eval.json  baseline.csv  bc_seals_half_cheetah_best_hp_eval.json  compute_probability_of_improvement.py  dagger_seals_half_cheetah_best_hp_eval.json  dagger_seals_hopper_best_hp_eval.json  dagger_seals_swimmer_best_hp_eval.json  example_airl_seals_ant_best_hp_eval.json  example_airl_seals_half_cheetah_best_hp_eval.json  example_airl_seals_hopper_best_hp_eval.json  example_airl_seals_swimmer_best_hp_eval.json  example_airl_seals_walker_best_hp_eval.json  example_bc_seals_ant_best_hp_eval.json  example_bc_seals_half_cheetah_best_hp_eval.json  example_bc_seals_hopper_best_hp_eval.json  example_bc_seals_swimmer_best_hp_eval.json  example_bc_seals_walker_best_hp_eval.json  (+38 more)
(+786 files in other folders)
