[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# [tool.setuptools_scm]
# # Disable local scheme to allow uploads to Test PyPI.
# # See https://github.com/pypa/setuptools_scm/issues/342
# local_scheme = "imitation.version:get_version"

[tool.black]
target-version = ["py38"]
